fixed some spacing

--- a/src/App.css
+++ b/src/App.css
@@ -247,6 +247,6 @@ body {
   }
 
   .boring-website + .boring-website {
-    margin: 20px 0px 0px 0px;
+    margin: 20px 10px 0px 10px;
   }
 }
